# pyodi

./: .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  LICENSE  README.md  conda.yaml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyodi-dev.yaml  pyodi.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/: CONTRIBUTING.md  issue-branch.yml
.github/workflows/: cd.yml  ci.yml  issue-branch.yml  main.yml
css/: extra.css
docs/: index.md  install.md
docs/reference/apps/: coco-merge.md  coco-split.md  crops-merge.md  crops-split.md  evaluation.md  ground-truth.md  paint-annotations.md  train-config-evaluation.md  train-config-generation.md
docs/reference/core/: anchor_generator.md  boxes.md  clustering.md  crops.md  nms.md  utils.md
docs/reference/plots/: boxes.md  clustering.md  common.md  evaluation.md  images.md
install/: index.html
pyodi/: cli.py  evaluation.py  ground_truth.py  train_config.py
pyodi/apps/: coco.py  coco_merge.py  coco_split.py  crops.py  crops_join.py  crops_merge.py  crops_split.py  evaluation.py  ground_truth.py  paint_annotations.py  train_config.py  train_config_evaluation.py  train_config_generation.py
pyodi/apps/coco/: __init__.py  coco_merge.py  coco_split.py
pyodi/apps/crops/: __init__.py  crops_merge.py  crops_split.py
pyodi/apps/train_config/: __init__.py  train_config_evaluation.py  train_config_generation.py
pyodi/coco/: cocoeval.py  utils.py
pyodi/core/: anchor_generator.py  boxes.py  clustering.py  crops.py  nms.py  utils.py
pyodi/plots/: __init__.py  annotations.py  bounding_box_distribution.py  boxes.py  clustering.py  common.py  evaluation.py  image_shape_distribution.py  images.py  utils.py
reference/apps/coco-merge/: index.html
reference/apps/coco-split/: index.html
reference/apps/crops-merge/: index.html
reference/apps/crops-split/: index.html
reference/apps/evaluation/: index.html
requirements/: build.txt  dev.txt  runtime.txt
resources/: anchor_config.py
search/: search_index.json
tests/apps/: test_coco_merge.py  test_coco_split.py  test_crops_merge.py  test_crops_split.py  test_ground_truth.py  test_merge.py  test_merge_gt.py  test_paint_annotations.py
tests/coco/: test_utils.py
tests/core/: test_anchor_generator.py  test_boxes.py  test_clustering.py  test_crops.py  test_nms.py  test_utils.py
tests/plots/: test_centroids_heatmap.py
(+14 files in other folders)
