[metadata]
name = pyodi
version = 0.0.7
author = Pyodi
description = Object Detection Insights
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gradiant/pyodi

[options]
packages = find_namespace:
python_requires = >=3.7
install_requires =
  numpy==1.20.1
  loguru==0.5.3
  matplotlib==3.3.4
  numba>=0.52.0
  pandas==1.2.1
  pillow==8.1.0
  plotly==5.2.2
  pycocotools==2.0.2
  kaleido==v0.2.1
  scikit-learn==0.24.1
  fire==0.4.0

[options.packages.find]
exclude =
	build*
	docs*
	tests*

[options.extras_require]
dev =
  black==20.8b1
  flake8==3.8.4
  flake8-docstrings==1.5.0
  isort==5.7.0
  mkdocs==1.1.2
  mkdocstrings==0.14.0
  mkdocs-material==6.2.8
  mypy==0.800
  pre-commit==2.10.1
  pydocstyle==5.1.1
  pymdown-extensions==8.1.1
  pytest==6.2.2

[options.entry_points]
console_scripts =
    pyodi = pyodi.cli:app
