[metadata]
name = pyodi
version = 0.0.8
author = Pyodi
description = Object Detection Insights
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gradiant/pyodi

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
  numpy==1.22.1
  loguru==0.6.0
  matplotlib==3.5.2
  numba>=0.56.0
  pandas==1.4.2
  pillow==9.2.0
  plotly==5.9.0
  pycocotools==2.0.4
  kaleido==v0.2.1
  scikit-learn==1.1.1
  fire==0.4.0

[options.packages.find]
exclude =
	build*
	docs*
	tests*

[options.extras_require]
dev =
  black==22.6.0
  flake8==4.0.1
  flake8-docstrings==1.6.0
  isort==5.10.1
  mkdocs==1.3.1
  mkdocstrings==0.19.0
  mkdocs-material==8.3.9
  mkdocstrings-python==0.7.1
  mock==4.0.3
  mypy==0.960
  pre-commit==2.20.0
  pydocstyle==6.1.1
  pymdown-extensions==9.5
  pytest==7.1.2

[options.entry_points]
console_scripts =
    pyodi = pyodi.cli:app
